Начата реализация попапа.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Миляков</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <!-- <link rel="stylesheet" href="css/jscrollpane.css"> -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -108,62 +107,78 @@
             <div class="gallery gallery--portfolio">
               <div class="gallery__container gallery__container--portfolio">
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_golden_voice_of_russia.jpg" width="345" height="228" alt="VIII Международный вокальный фестиваль «Золотой Голос России»."></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">VIII Международный вокальный фестиваль «Золотой Голос России».</h3>
-                    <p class="gallery__text gallery__text--portfolio">20.01.16 в концертном зале «Королевский» более 100 вокалистов боролись за звание лучшего. Участников оценивали российская и советская певица Ольга Кормухина, финалистка шоу «Голос»
-                       Эра Канн, певец Bahh Tee, а фестиваль был показан по каналу STV.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_golden_voice_of_russia.jpg" width="345" height="228" alt="VIII Международный вокальный фестиваль «Золотой Голос России»."></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">VIII Международный вокальный фестиваль «Золотой Голос России».</h3>
+                      <p class="gallery__text gallery__text--portfolio">20.01.16 в концертном зале «Королевский» более 100 вокалистов боролись за звание лучшего. Участников оценивали российская и советская певица Ольга Кормухина, финалистка шоу «Голос»
+                         Эра Канн, певец Bahh Tee, а фестиваль был показан по каналу STV.</p>
+                    </figcaption>
+                  </a>
                 </figure>
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--training_on_public_speaking.jpg" width="358" height="228" alt="Тренинг по публичным выступлениям."></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">Тренинг по Публичным выступлениям.</h3>
-                    <p class="gallery__text gallery__text--portfolio">Делюсь накопленным опытом в своей профессиональной сфере. Не обошлось и без десятка практических упражнений.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--training_on_public_speaking.jpg" width="358" height="228" alt="Тренинг по публичным выступлениям."></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">Тренинг по Публичным выступлениям.</h3>
+                      <p class="gallery__text gallery__text--portfolio">Делюсь накопленным опытом в своей профессиональной сфере. Не обошлось и без десятка практических упражнений.</p>
+                    </figcaption>
+                  </a>
                 </figure>
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--presentation_of_the_new_collection_in_the_network_of_jewelry_stores_adamas.jpg" width="152" height="228" alt="Презентация новой коллекции в сети ювелирных магазинов «Адамас»."></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">Сеть ювелирных магазинов «Адамас».</h3>
-                    <p class="gallery__title gallery__title--portfolio">Презентация новой коллекции.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--presentation_of_the_new_collection_in_the_network_of_jewelry_stores_adamas.jpg" width="152" height="228" alt="Презентация новой коллекции в сети ювелирных магазинов «Адамас»."></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">Сеть ювелирных магазинов «Адамас».</h3>
+                      <p class="gallery__title gallery__title--portfolio">Презентация новой коллекции.</p>
+                    </figcaption>
+                  </a>
                 </figure>
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--show_songs_from_the_stars.jpg" width="361" height="228" alt="Шоу \"Песни со звёздами\"."></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
-                    <p class="gallery__text gallery__text--portfolio">В гостях лауреат премии «Золотой Граммофон» Согдиана. Клуб Пятница. Специально для канала STV.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--show_songs_from_the_stars.jpg" width="361" height="228" alt="Шоу \"Песни со звёздами\"."></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                      <p class="gallery__text gallery__text--portfolio">В гостях лауреат премии «Золотой Граммофон» Согдиана. Клуб Пятница. Специально для канала STV.</p>
+                    </figcaption>
+                  </a>
                 </figure>
                 <br>
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--internship_in_match_tv.jpg" width="416" height="228" alt="Стажировка на МАТЧ ТВ!"></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">Стажировка на МАТЧ ТВ!</h3>
-                    <p class="gallery__text gallery__text--portfolio">Десятки часов тренировок и отработок самых невероятных форс-мажорных ситуаций в студии во время прямого эфира.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--internship_in_match_tv.jpg" width="416" height="228" alt="Стажировка на МАТЧ ТВ!"></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">Стажировка на МАТЧ ТВ!</h3>
+                      <p class="gallery__text gallery__text--portfolio">Десятки часов тренировок и отработок самых невероятных форс-мажорных ситуаций в студии во время прямого эфира.</p>
+                    </figcaption>
+                  </a>
                 </figure>
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--tv_show_musical_ring.jpg" width="152" height="228" alt="Телешоу «Музыкальный ринг». Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу."></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">Телешоу «Музыкальный ринг».</h3>
-                    <p class="gallery__text gallery__text--portfolio">Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--tv_show_musical_ring.jpg" width="152" height="228" alt="Телешоу «Музыкальный ринг». Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу."></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">Телешоу «Музыкальный ринг».</h3>
+                      <p class="gallery__text gallery__text--portfolio">Генеральный продюсер iRADIO Константин Кирьянов делиться своими впечатлениями от шоу.</p>
+                    </figcaption>
+                  </a>
                 </figure>
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--anita_tsoy_in_the_guests_of_the_show_songs_with_the_stars.jpg" width="349" height="228" alt="Анита Цой в гостях шоу «Песни со звездами»."></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
-                    <p class="gallery__text gallery__text--portfolio">В гостях Анита Цой.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--anita_tsoy_in_the_guests_of_the_show_songs_with_the_stars.jpg" width="349" height="228" alt="Анита Цой в гостях шоу «Песни со звездами»."></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                      <p class="gallery__text gallery__text--portfolio">В гостях Анита Цой.</p>
+                    </figcaption>
+                  </a>
                 </figure>
                 <figure class="gallery__item gallery__item--portfolio">
-                  <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_guest_of_the_show_songs_with_stars_alexey_nazarov.jpg" width="295" height="228" alt="В гостях шоу «Песни со звездами» российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24."></p>
-                  <figcaption class="gallery__description gallery__description--portfolio">
-                    <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
-                    <p class="gallery__text gallery__text--portfolio">В гостях российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24.</p>
-                  </figcaption>
+                  <a class="gallery__link gallery__link--portfolio">
+                    <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--the_guest_of_the_show_songs_with_stars_alexey_nazarov.jpg" width="295" height="228" alt="В гостях шоу «Песни со звездами» российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24."></p>
+                    <figcaption class="gallery__description gallery__description--portfolio">
+                      <h3 class="gallery__title gallery__title--portfolio">Шоу «Песни со звездами».</h3>
+                      <p class="gallery__text gallery__text--portfolio">В гостях российский певец, битмейкер и продюсер Алексей Назаров, известный под псевдонимом LX-24.</p>
+                    </figcaption>
+                  </a>
                 </figure>
               </div>
             </div>
