Попап можно закрыть по ESC. Отредактирована секция клиенты.

--- a/index.html
+++ b/index.html
@@ -232,11 +232,11 @@
                   <p class="gallery__picture gallery__picture--clients"><img src="img/logo__clients--the_snow_queen.png" width="202" height="42" alt="Снежная Королева"></p>
                 </figure>
               </div>
-              <div class="scroll scroll--portfolio">
-                <div class="scroll__arrow scroll__arrow--left"></div>
-                <div class="scroll__track"></div>
-                <div class="scroll__arrow scroll__arrow--right"></div>
-              </div>
+            </div>
+            <div class="scroll scroll--clients">
+              <div class="scroll__arrow scroll__arrow--left scroll__arrow--clients"></div>
+              <div class="scroll__track scroll__track--clients"></div>
+              <div class="scroll__arrow scroll__arrow--right scroll__arrow--clients"></div>
             </div>
           </div>
         </div>
