Выровнен по пиксельперфект

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
             <a class="phone-block__phone" href="tel:89262461146">+7 (926) 246-11-46</a>
             <a class="phone-block__btn" href="#">Заказать звонок</a>
           </div>
-          <label for="spoiler"></label>
         </div>
       </div>
     </header>
 
     <main>
       <input type="checkbox" id="spoiler" hidden>
+      <label for="spoiler"></label>
       <div class="spoiler">
         <div class="container container--spoiler">
           <div class="container__inner-wrapper">
@@ -134,7 +134,7 @@
                     <p class="gallery__picture gallery__picture--portfolio"><img src="img/pic__gallery--presentation_of_the_new_collection_in_the_network_of_jewelry_stores_adamas.jpg" width="152" height="228" alt="Презентация новой коллекции в сети ювелирных магазинов «Адамас»."></p>
                     <figcaption class="gallery__description gallery__description--portfolio">
                       <h3 class="gallery__title gallery__title--portfolio">Сеть ювелирных магазинов «Адамас».</h3>
-                      <p class="gallery__title gallery__title--portfolio">Презентация новой коллекции.</p>
+                      <p class="gallery__text gallery__text--portfolio">Презентация новой коллекции.</p>
                     </figcaption>
                   </a>
                 </figure>
@@ -197,7 +197,7 @@
       <section class="content content--clients" id="clients">
         <div class="container">
           <div class="container__inner-wrapper">
-            <h2 class="content__title">Клиенты</h2>
+            <h2 class="content__title content__title--clients">Клиенты</h2>
             <div class="gallery gallery--clients">
               <div class="gallery__container gallery__container--clients">
                 <figure class="gallery__item gallery__item--clients">
