Остановился на том, что надо самому все события для скролла хедера прописывать и onscroll тоже оставить, так как если ползунок перетаскивать, получается плавно тогда

--- a/index.html
+++ b/index.html
@@ -10,53 +10,55 @@
     <header class="page-header">
       <div class="container container--header">
         <div class="container__inner-wrapper container__inner-wrapper--header clearfix">
-          <div class="logo column column--three-quarters">
-            <img src="img/logo__header--milyakov.svg" width="150" height="77" alt="Anton Milyakov">
+          <div class="first-screen">
+            <div class="logo column column--three-quarters">
+              <img src="img/logo__header--milyakov.svg" width="150" height="77" alt="Anton Milyakov">
+            </div>
+            <nav class="navigation column column--right column--eighteen-quarters">
+              <a class="navigation__btn" href="#">Меню</a>
+              <ul class="navigation__list">
+                <li class="navigation__item"><a class="navigation__link" href="#how-i-work">Как я работаю</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#about-me">О себе</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#portfolio">Портфолио</a></li>
+                <li class="navigation__item"><a class="navigation__link" href="#clients">Клиенты</a></li>
+                <li class="navigation__item">
+                  <a class="navigation__link" href="#contacts">Контакты</a>
+                  <div class="navigation__modal-window">
+                    <ul class="navigation__list navigation__list--modal-window">
+                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">instagram</a></li>
+                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">vkontakte</a></li>
+                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">milyakov.anton@gmail.com</a></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+            </nav>
+            <h1 class="page-title">
+              <p class="page-title__role">Ведущий для вашего</p>
+              <p class="page-title__category">Корпоратива</p>
+            </h1>
+            <div class="phone-block">
+              <a class="phone-block__phone" href="tel:89262461146">+7 (926) 246-11-46</a>
+              <a class="phone-block__btn" href="#">Заказать звонок</a>
+            </div>
+            <input type="checkbox" id="second-screen" hidden>
+            <label for="second-screen"></label>
           </div>
-          <nav class="navigation column column--right column--eighteen-quarters">
-            <a class="navigation__btn" href="#">Меню</a>
-            <ul class="navigation__list">
-              <li class="navigation__item"><a class="navigation__link" href="#how-i-work">Как я работаю</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#about-me">О себе</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#portfolio">Портфолио</a></li>
-              <li class="navigation__item"><a class="navigation__link" href="#clients">Клиенты</a></li>
-              <li class="navigation__item">
-                <a class="navigation__link" href="#contacts">Контакты</a>
-                <div class="navigation__modal-window">
-                  <ul class="navigation__list navigation__list--modal-window">
-                    <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">instagram</a></li>
-                    <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">vkontakte</a></li>
-                    <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">milyakov.anton@gmail.com</a></li>
-                  </ul>
-                </div>
-              </li>
-            </ul>
-          </nav>
-          <h1 class="page-title">
-            <p class="page-title__role">Ведущий для вашего</p>
-            <p class="page-title__category">Корпоратива</p>
-          </h1>
-          <div class="phone-block">
-            <a class="phone-block__phone" href="tel:89262461146">+7 (926) 246-11-46</a>
-            <a class="phone-block__btn" href="#">Заказать звонок</a>
-          </div>
-          <input type="checkbox" id="spoiler" hidden>
-          <label for="spoiler"></label>
-          <div class="spoiler">
-            <p class="spoiler__text spoiler__text--title">
+          <div class="second-screen">
+            <p class="second-screen__text second-screen__text--title">
               Здравствуйте!<br>
               Меня зовут Антон Миляков.
             </p>
-            <p class="spoiler__text">Я ведущий <b class="spoiler__text spoiler__text--feature">ярких</b> мероприятий в Москве и не только.
+            <p class="second-screen__text">Я ведущий <b class="second-screen__text second-screen__text--feature">ярких</b> мероприятий в Москве и не только.
               От&nbsp;маленьких и уютных до больших и роскошных.</p>
-            <p class="spoiler__text">К каждому мероприятию у меня <b class="spoiler__text spoiler__text--feature">персональный подход</b>,
-              я&nbsp;стараюсь сделать их <b class="spoiler__text spoiler__text--feature">уникальными</b>
+            <p class="second-screen__text">К каждому мероприятию у меня <b class="second-screen__text second-screen__text--feature">персональный подход</b>,
+              я&nbsp;стараюсь сделать их <b class="second-screen__text second-screen__text--feature">уникальными</b>
               и&nbsp;не&nbsp;похожими&nbsp;друг&nbsp;на&nbsp;друга.</p>
-            <p class="spoiler__text">Сценарий каждого события составляется на основе
-              <b class="spoiler__text spoiler__text--feature">ваших&nbsp;пожеланий</b> и моих идей.</p>
-            <p class="spoiler__text spoiler__text--conclusion">Я люблю свою работу.<br>
+            <p class="second-screen__text">Сценарий каждого события составляется на основе
+              <b class="second-screen__text second-screen__text--feature">ваших&nbsp;пожеланий</b> и моих идей.</p>
+            <p class="second-screen__text second-screen__text--conclusion">Я люблю свою работу.<br>
               Видеть сияющие и радостные глаза гостей,
-              для меня <b class="spoiler__text spoiler__text--conclusion spoiler__text--feature">настоящее удовольствие</b>!</p>
+              для меня <b class="second-screen__text second-screen__text--conclusion second-screen__text--feature">настоящее удовольствие</b>!</p>
           </div>
         </div>
       </div>
