Остановился на скрипте стрелочки в хедере. Всё-таки надо что-то делать с дёрганьем картинки бэкграунда.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
               <a class="phone-block__phone" href="tel:89262461146">+7 (926) 246-11-46</a>
               <a class="phone-block__btn" href="#">Заказать звонок</a>
             </div>
-            <input type="checkbox" id="second-screen" hidden>
-            <label for="second-screen"></label>
+            <div class="arrow"></div>
           </div>
           <div class="second-screen">
             <p class="second-screen__text second-screen__text--title">
