Сделан плавный захват фонблока и доделан внешний вид фикседхэта.Осталось разобраться с тем, как меню там будет выпадать и с периодически неплавным скроллингом.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <header class="page-header">
       <div class="container container--header">
-        <div class="container__inner-wrapper container__inner-wrapper--header clearfix">
-          <div class="first-screen">
+        <div class="container__inner-wrapper container__inner-wrapper--header">
+          <div class="first-screen clearfix">
             <div class="logo column column--three-quarters">
               <img src="img/logo__header--milyakov.svg" width="150" height="77" alt="Anton Milyakov">
             </div>
