Поправлен баг с исчезанием фонблока при наведении на кнопку меню. Добавлены ссылки на соцсети.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                   <a class="navigation__link" href="#contacts">Контакты</a>
                   <div class="navigation__modal-window">
                     <ul class="navigation__list navigation__list--modal-window">
-                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">instagram</a></li>
-                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">vkontakte</a></li>
-                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="#">milyakov.anton@gmail.com</a></li>
+                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="https://www.instagram.com/milyakov.anton/" target="_blank">instagram</a></li>
+                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="http://vk.com/milyakov.anton" target="_blank">vkontakte</a></li>
+                      <li class="navigation__item navigation__item--modal-window"><a class="navigation__link navigation__link--modal-window" href="mailto:milyakov.anton@gmail.com">milyakov.anton@gmail.com</a></li>
                     </ul>
                   </div>
                 </li>
@@ -255,7 +255,7 @@
           </section>
           <section class="partners column column--ten-quarters">
             <div class="partners__logo">
-              <a class="partners__link" href="http://i-egoist.ru/">
+              <a class="partners__link" href="http://i-egoist.ru/" target="_blank">
                 <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
               </a>
               <p class="partners__text">Я одеваюсь здесь!</p>
@@ -263,7 +263,7 @@
           </section>
           <section class="copyright column column--six-quarters">
             <p class="copyright__text">
-              Разработано <a class="copyright__company" href="http://startjulo.ru/">Julo</a>
+              Разработано <a class="copyright__company" href="http://startjulo.ru/" target="_blank">Julo</a>
             </p>
           </section>
         </div>
